[package]
name = "exposed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.29", features = ["tokio-comp", "json"] }
tokio = { version = "1.32", features = ["full"] }
ckb-discovery-types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = "0.4"
env_logger = "0.10"
actix-rt = "2.8.0"
actix-web = { version = "4.3.1" }
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.8.1"
clap = "4"
